--- a/src/cadastro/cadastro.html
+++ b/src/cadastro/cadastro.html
@@ -24,7 +24,7 @@
     <div class="form-container">
       <p class="text-main-color">Cadastro</p>
       <br />
-      <form name="form_login" class="form-login"> <br />
+      <form name="form_login" class="form-login" action="../login/login.html"> <br />
         <!-- method="POST" -->
 
         <div id="msgError"></div>
