update cadastro.js and login.js

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -24,7 +24,7 @@
     </div>
     <div class="form-container">
       <p class="text-main-color">LOGIN</p>
-      <form name="form_login" class="form-login" action="../denuncias/denuncias.html">
+      <form name="form_login" onsubmit="login()" class="form-login">
         <!--method="POST"-->
         <input type="text" class="input-base" name="nome" placeholder="Usuário" /><br />
         <input type="password" class="input-base" name="senha" placeholder="Senha" /><br />
@@ -37,6 +37,7 @@
       </div>
     </div>
   </div>
+  <script src="login.js"></script>
 </body>
 
 </html>
