--- a/src/recuperar-senha/insira-seu-email.html
+++ b/src/recuperar-senha/insira-seu-email.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../base.css" />
   <link rel="stylesheet" href="insira-seu-email.css">
   <title>Recuperar senha - SOS WEB</title>
-
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
@@ -20,13 +20,14 @@
     </div>
     <div class="form-container">
       <p class="text-main-color">RECUPERAR SENHA</p>
-      <form name="form_recupsenha2" class="form-recupsenha2" action="../recuperar-senha/recuperar-senha.html">
+      <form name="form_recupsenha2" class="form-recupsenha2">
         <!--method="POST"-->
         <input type="email" class="input-base" name="senha1" placeholder="Insira seu e-mail" /><br />
-        <input type="submit" class="button-base bg-main-color" value="Enviar" />
+        <input type="submit" class="button-base bg-main-color" value="Enviar"/>
       </form>
     </div>
   </div>
+  <script src="insira-seu-email.js"></script>
 </body>
 
 </html>
