feat: recuperar senha pelo link

--- a/src/recuperar-senha/recuperar-senha.html
+++ b/src/recuperar-senha/recuperar-senha.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../base.css" />
   <link rel="stylesheet" href="recuperar-senha.css">
   <title>Recuperar senha - SOS WEB</title>
-
+  <script src="./recuperar-senha.js"></script>
 </head>
 
 <body>
@@ -20,10 +20,10 @@
     </div>
     <div class="form-container">
       <p class="text-main-color">RECUPERAR SENHA</p>
-      <form name="form_recupsenha" class="form-recupsenha" action="../login/login.html">
+      <form name="form_recupsenha" class="form-recupsenha">
         <!--method="POST"-->
         <input type="password" class="input-base" name="senha1" placeholder="Insira sua nova senha" /><br />
-        <input type="password" class="input-base" name="senha" placeholder="Repita sua nova senha" /><br />
+        <input type="password" class="input-base" name="senha2" placeholder="Repita sua nova senha" /><br />
         <input type="submit" class="button-base bg-main-color" value="Enviar" />
       </form>
     </div>
