feat: remove my denunciations

--- a/src/minhas-denuncias/minhas-denuncias.html
+++ b/src/minhas-denuncias/minhas-denuncias.html
@@ -61,7 +61,7 @@
           </div>
           <h1>Minhas Denúncias</h1>
           <!-- Analyses-->
-          <div class="denounce-analyses" id="d-a">
+          <!-- <div class="denounce-analyses" id="d-a">
             <div class="title-denounce-analyses">
               <h2>Spotlight</h2>
               <i onclick="myDelete()" style="margin-right: 10px;" class="gg-trash"></i>
@@ -73,7 +73,6 @@
             </div>
           </div>
 
-          <!-- Malicious-->
           <div class="denounce-malicious" id="d-a">
             <div class="title-denounce-malicious">
               <h2>BaixeAgora</h2>
@@ -84,7 +83,7 @@
               <h4>www.baixeagora.com.br</h4>
               <h5>Muito Spam não me parece um site confíavel.</h5>
             </div>
-          </div>
+          </div> -->
           <!-- Botão +-->
           <a class="add-button" href="../criar-denuncia/criar-denuncia.html">
             <!-- trocar <button> por <a type="button"> -->
