wip: progresso em denuncias

--- a/src/denuncias/denuncias.html
+++ b/src/denuncias/denuncias.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
     rel="stylesheet" />
+  <script src="./denuncias.js" defer></script>
 
   <title>Denúncias - SOS WEB</title>
 </head>
@@ -82,62 +83,12 @@
                 <th>Nome</th>
                 <th>Nocividade</th>
               </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html"><span>Baixa</span></a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Baixa</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
             </table>
             <footer>
               <div class="table-footer">
-                <p>Total de registros: 10</p>
+                <p class="records"></p>
                 <div class="pagination">
-                  <p>Página 1 de 143</p>
+                  <p class="pages"></p>
                   <img class="next-pagination" src="../assets/chevron-right.svg" alt="next-pagination">
                 </div>
               </div>
