edição do usuário

--- a/src/pages/usuario/usuario.html
+++ b/src/pages/usuario/usuario.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
     rel="stylesheet" />
+  <script src="../../main.js" defer></script>
+  <script src="../../DOMUtils.js" defer></script>
+  <script src="usuario.js" defer></script>
 
   <title>Usuário - SOS WEB</title>
 </head>
@@ -62,42 +65,42 @@
           <span>
             Nome do usuário
           </span>
-          <div class="email-container">
+          <div id="email-container">
             <img src="../../assets/email.svg" alt="logo" />
-            <span style="margin-left: 10px;">
+            <span id="email-info" style="margin-left: 10px;">
               michaelalberto@gmail.com
             </span>
-            <img class="edit-icon" src="../../assets/edit.svg" alt="edit" />
+            <img id="edit-email" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div class="telephone-container">
+          <div id="telephone-container">
             <img src="../../assets/telephone.svg" alt="logo" />
-            <span style="margin-left: 10px;">
+            <span id="telephone-info" style="margin-left: 10px;">
               55 (31) 99999-9999
             </span>
-            <img class="edit-icon" src="../../assets/edit.svg" alt="edit" />
+            <img id="edit-telephone" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div class="age-container">
+          <div id="age-container">
             <img src="../../assets/age-group.svg" alt="logo" />
-            <span style="margin-left: 10px;">
+            <span id="age-info" style="margin-left: 10px;">
               18 anos
             </span>
-            <img class="edit-icon" src="../../assets/edit.svg" alt="edit" />
+            <img id="edit-age" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div class="data-container">
+          <div id="data-container">
             <img src="../../assets/data.svg" alt="logo" />
-            <span style="margin-left: 10px;">
+            <span id="data-info" style="margin-left: 10px;">
               10 Análises
             </span>
-            <img class="edit-icon" src="../../assets/edit.svg" alt="edit" />
+            <img id="edit-data" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div class="chat-container">
+          <div id="chat-container">
             <img src="../../assets/chat.svg" alt="logo" />
-            <span style="margin-left: 10px;">
+            <span id="chat-info" style="margin-left: 10px;">
               1 Comentário
             </span>
-            <img class="edit-icon" src="../../assets/edit.svg" alt="edit" />
+            <img id="edit-chat" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div class="menu-bar">
+          <div id="menu-bar">
             <a href="../usuario/usuario.html">
               <img src="../../assets/icon-user.svg" alt="icon">
             </a>
