--- a/src/pages/comentarios/comentarios.html
+++ b/src/pages/comentarios/comentarios.html
@@ -61,7 +61,7 @@
     </nav>
     <div class="app">
       <div class="top-navbar">
-        <p>Lorem ipsum</p>
+        <p id="top-user-name"></p>
         <img src="../../assets/user.svg" alt="user" />
       </div>
       <div class="app-container">
