--- a/src/pages/minhas-denuncias/minhas-denuncias.html
+++ b/src/pages/minhas-denuncias/minhas-denuncias.html
@@ -63,7 +63,7 @@
     </nav>
     <div class="app">
       <header class="top-navbar">
-        <p>Lorem ipsum</p>
+        <p id="top-user-name"></p>
         <a href="../usuario/usuario.html">
           <img src="../../assets/user.svg" alt="user" />
         </a>
