--- a/src/pages/criar-denuncia/criar-denuncia.html
+++ b/src/pages/criar-denuncia/criar-denuncia.html
@@ -24,43 +24,19 @@
         <h4>WEB</h4>
       </div>
       <div class="nav-options">
-        <div class="nav-options">
-          <div class="home-nav">
-            <a href="../denuncias/denuncias.html">
-              <img
-                id="home-icon"
-                class="left-nav-icon"
-                src="../../assets/icon-home.svg"
-                alt="home"
-              />
-            </a>
-            <p>Denúncias</p>
-          </div>
-          <div class="user-denunciations-nav">
-            <a>
-              <img
-                id="denunciations-icon"
-                class="left-nav-icon"
-                src="../../assets/icon-tasklist.svg"
-                alt="denunciations"
-              />
-            </a>
-            <p id="acao-user-denunciations-nav"></p>
-          </div>
-          <div class="logout-nav">
-            <a onclick="desloga()">
-              <img
-                id="logout-icon"
-                class="left-nav-icon"
-                src="../../assets/exit.svg"
-                alt="logout"
-              />
-            </a>
-            <p>Sair</p>
-          </div>
+        <div class="home-nav">
+          <a href="../denuncias/denuncias.html">
+            <img
+              id="home-icon"
+              class="left-nav-icon"
+              src="../../assets/icon-home.svg"
+              alt="home"
+            />
+          </a>
+          <p>Denúncias</p>
         </div>
         <div class="user-denunciations-nav">
-          <a href="../minhas-denuncias/minhas-denuncias.html">
+          <a>
             <img
               id="denunciations-icon"
               class="left-nav-icon"
@@ -68,7 +44,7 @@
               alt="denunciations"
             />
           </a>
-          <p>Minhas denúncias</p>
+          <p id="acao-user-denunciations-nav"></p>
         </div>
         <div class="logout-nav">
           <a onclick="desloga()">
@@ -85,7 +61,7 @@
     </nav>
     <div class="app">
       <header class="top-navbar">
-        <p>Lorem ipsum</p>
+        <p id="top-user-name"></p>
         <a href="../usuario/usuario.html">
           <img src="../../assets/user.svg" alt="user" />
         </a>
