--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -110,6 +110,28 @@
               </div>
             </header>
             <main>
+              <div class="modal-overlay" style="display: none">
+                <div class="modal-container">
+                  <a class="close-modal" type="button">
+                    <p class="btn-close-modal">x</p>
+                  </a>
+                  <div class="modal-header">
+                    <h1></h1>
+                    <a>
+                      <img
+                        style="padding-right: 1.5rem"
+                        src="../../assets/arrow-right.svg"
+                        alt="Comentários"
+                      />
+                    </a>
+                  </div>
+                  <div class="modal-content">
+                    <p class="content-link"></p>
+                    <br />
+                    <span class="content-historia"></span>
+                  </div>
+                </div>
+              </div>
               <table style="overflow-x: auto" id="denunciations-table">
                 <tr class="table-header">
                   <th>Site/E-mail</th>
