--- a/src/pages/comentarios/comentarios.html
+++ b/src/pages/comentarios/comentarios.html
@@ -69,7 +69,7 @@
           <div class="comments">
             <header>
               <div class="modal-header">
-                <h1>Aloha</h1>
+                <h1></h1>
                 <div class="option-header">
                   <img
                     class="tree-dots-option"
@@ -79,46 +79,16 @@
                 </div>
               </div>
               <div class="modal-content">
-                <p class="content-warning">Malicioso</p>
-                <br />
                 <p class="content-link">www.aloha.com.br</p>
                 <br />
-                Esse site de compras possui muitos comentários e avaliações de
-                golpes e aparentemente a plataforma não pune os estelionatários.
+                <span class="content-historia"></span>
               </div>
             </header>
             <main>
               <div class="add-comment">
-                <a href="../adicionar-comentarios/adicionar-comentarios.html">
+                <a>
                   <p>Escrever comentário ></p>
                 </a>
-              </div>
-              <div class="user-comment">
-                <img
-                  class="user-image"
-                  src="../../assets/user.svg"
-                  alt="user"
-                />
-                <div class="comment-container">
-                  <p>
-                    Tive uma experiência muito de sagradável, levei um golpe e
-                    não cheguei a ser ressarcido e a loja continua vendendo e
-                    aplicando golpes.
-                  </p>
-                </div>
-              </div>
-              <div class="user-comment">
-                <img
-                  class="user-image"
-                  src="../../assets/user.svg"
-                  alt="user"
-                />
-                <div class="comment-container">
-                  <p>
-                    Muito ruim, o site parece umamáfia, produtos muito baratose
-                    anúncios fora da realidade,parece ser tudo uma farsa!
-                  </p>
-                </div>
               </div>
             </main>
             <div class="menu-bar">
@@ -143,5 +113,6 @@
     </div>
     <script src="../../DOMUtils.js"></script>
     <script src="../../main.js"></script>
+    <script src="./comentarios.js"></script>
   </body>
 </html>
