fix: cadastro layout

--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="card-mobile sign-up">
-      <div class="form-container">
+      <div class="form-container" style="height: 80vh">
         <p class="text-main-color">Cadastro</p>
         <br />
         <form name="form_login" id="form_cadastro" class="form-login">
@@ -76,8 +76,7 @@
           <label id="labelNasc" for="nascimento"></label>
           <input
             type="date"
-            class="input-base"
-            style="width: 100%"
+            class="input-base-date"
             id="nascimento"
             name="nascimento"
             min="1900-01-01"
@@ -113,7 +112,7 @@
           <br />
           <input
             type="submit"
-            class="button-base bg-main-color"
+            class="button-base bg-main-color button-sign-up"
             id="validar"
             value="Cadastrar"
           />
