fix: minhas denuncias layout and deleteDenuncia

--- a/src/pages/minhas-denuncias/minhas-denuncias.html
+++ b/src/pages/minhas-denuncias/minhas-denuncias.html
@@ -104,8 +104,7 @@
             </div>
           </div> -->
             <!-- Botão +-->
-            <a class="add-button" href="../criar-denuncia/criar-denuncia.html">
-              <!-- trocar <button> por <a type="button"> -->
+            <a class="add-button" type="button" href="../criar-denuncia/criar-denuncia.html">
               +
             </a>
 
