feat: add input styles

--- a/src/pages/usuario/usuario.html
+++ b/src/pages/usuario/usuario.html
@@ -65,35 +65,35 @@
           <span>
             Nome do usuário
           </span>
-          <div id="email-container">
+          <div id="email-container" class="center">
             <img src="../../assets/email.svg" alt="logo" />
             <span id="email-info" style="margin-left: 10px;">
               michaelalberto@gmail.com
             </span>
             <img id="edit-email" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div id="telephone-container">
+          <div id="telephone-container" class="center">
             <img src="../../assets/telephone.svg" alt="logo" />
             <span id="telephone-info" style="margin-left: 10px;">
               55 (31) 99999-9999
             </span>
             <img id="edit-telephone" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div id="age-container">
+          <div id="age-container" class="center">
             <img src="../../assets/age-group.svg" alt="logo" />
             <span id="age-info" style="margin-left: 10px;">
               18 anos
             </span>
             <img id="edit-age" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div id="data-container">
+          <div id="data-container" class="center">
             <img src="../../assets/data.svg" alt="logo" />
             <span id="data-info" style="margin-left: 10px;">
               10 Análises
             </span>
             <img id="edit-data" class="edit-icon" src="../../assets/edit.svg" alt="edit" />
           </div>
-          <div id="chat-container">
+          <div id="chat-container" class="center">
             <img src="../../assets/chat.svg" alt="logo" />
             <span id="chat-info" style="margin-left: 10px;">
               1 Comentário
