feat: adicionar foto do usuario

--- a/src/pages/denuncia-modal-convidado/denuncia-modal-convidado.html
+++ b/src/pages/denuncia-modal-convidado/denuncia-modal-convidado.html
@@ -28,7 +28,7 @@
     <header class="top-navbar">
       <p>Fazer login</p>
       <a href="../usuario/usuario.html">
-        <img src="../../assets/user.svg" alt="user">
+        <img src="../../assets/user.svg" class="profile-pic-nav" alt="user">
       </a>
     </header>
     <div class="app-container">
