--- a/src/pages/denuncias-convidado/denuncias-convidado.html
+++ b/src/pages/denuncias-convidado/denuncias-convidado.html
@@ -27,7 +27,7 @@
     <div class="top-navbar">
       <p>Fazer login</p>
       <a href="../login/login.html">
-        <img src="../../assets/user.svg" alt="user">
+        <img src="../../assets/user.svg" class="profile-pic-nav" alt="user">
       </a>
     </div>
     <div class="app-container">
