--- a/src/pages/adicionar-comentarios/adicionar-comentarios.html
+++ b/src/pages/adicionar-comentarios/adicionar-comentarios.html
@@ -1,139 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../../base.css" />
-    <link rel="stylesheet" href="adicionar-comentarios.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Adicionar comentários - SOS WEB</title>
-  </head>
+  <link rel="stylesheet" href="../../reset.css" />
+  <link rel="stylesheet" href="../../base.css" />
+  <link rel="stylesheet" href="adicionar-comentarios.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <nav class="left-navbar">
-      <div class="logo-nav">
-        <img src="../../assets/white_icon.svg" alt="sos-logo" />
-        <h4>WEB</h4>
-      </div>
-      <div class="nav-options">
-        <div class="home-nav">
-          <a href="../denuncias/denuncias.html">
-            <img
-              id="home-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-home.svg"
-              alt="home"
-            />
-          </a>
-          <p>Denúncias</p>
-        </div>
-        <div class="user-denunciations-nav">
-          <a>
-            <img
-              id="denunciations-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-tasklist.svg"
-              alt="denunciations"
-            />
-          </a>
-          <p id="acao-user-denunciations-nav"></p>
-        </div>
-        <div class="logout-nav">
-          <a onclick="desloga()">
-            <img
-              id="logout-icon"
-              class="left-nav-icon"
-              src="../../assets/exit.svg"
-              alt="logout"
-            />
-          </a>
-          <p>Sair</p>
-        </div>
-      </div>
-    </nav>
-    <div class="app">
-      <header class="top-navbar">
-        <p id="top-user-name"></p>
-        <a href="../usuario/usuario.html">
-          <img src="../../assets/user.svg" alt="user" />
+  <title>Adicionar comentários - SOS WEB</title>
+</head>
+
+<body>
+  <nav class="left-navbar">
+    <div class="logo-nav">
+      <img src="../../assets/white_icon.svg" alt="sos-logo" />
+      <h4>WEB</h4>
+    </div>
+    <div class="nav-options">
+      <div class="home-nav">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
         </a>
-      </header>
-      <div class="app-container">
-        <div class="card-app">
-          <div class="sign-up">
-            <div class="form-container">
-              <div class="option-header">
-                <img
-                  class="tree-dots-option"
-                  src="../../assets/tree-dots.svg"
-                  alt="logout"
-                />
-              </div>
-              <p class="text-main-color">Comentário</p>
-              <form
-                id="form_add_comentario"
-                name="form_add_comentario"
-                class="form-login"
-                action="../comentarios/comentarios.html"
-              >
-                <!-- method="POST" -->
-                <br />
-                <p1 class="escreva">Escreva algum comentário:</p1><br />
-                <label id="labelComentario" for="comentario"></label>
-                <textarea
-                  name="mensagem"
-                  id="comentario"
-                  class="input-base"
-                  rows="22"
-                  cols="36"
-                  style="resize: none"
-                >
+        <p>Denúncias</p>
+      </div>
+      <div class="user-denunciations-nav">
+        <a>
+          <img id="denunciations-icon" class="left-nav-icon" src="../../assets/icon-tasklist.svg" alt="denunciations" />
+        </a>
+        <p id="acao-user-denunciations-nav"></p>
+      </div>
+      <div class="logout-nav">
+        <a onclick="desloga()">
+          <img id="logout-icon" class="left-nav-icon" src="../../assets/exit.svg" alt="logout" />
+        </a>
+        <p>Sair</p>
+      </div>
+    </div>
+  </nav>
+  <div class="app">
+    <header class="top-navbar">
+      <p id="top-user-name"></p>
+      <a href="../usuario/usuario.html">
+        <img src="../../assets/user.svg" class="profile-pic-nav" alt="user" />
+      </a>
+    </header>
+    <div class="app-container">
+      <div class="card-app">
+        <div class="sign-up">
+          <div class="form-container">
+            <div class="option-header">
+              <img class="tree-dots-option" src="../../assets/tree-dots.svg" alt="logout" />
+            </div>
+            <p class="text-main-color">Comentário</p>
+            <form id="form_add_comentario" name="form_add_comentario" class="form-login"
+              action="../comentarios/comentarios.html">
+              <!-- method="POST" -->
+              <br />
+              <p1 class="escreva">Escreva algum comentário:</p1><br />
+              <label id="labelComentario" for="comentario"></label>
+              <textarea name="mensagem" id="comentario" class="input-base" rows="22" cols="36" style="resize: none">
                 </textarea>
-                <br />
-                <br />
-                <br />
-                <button
-                  type="submit"
-                  class="button-base bg-main-color"
-                  value="Enviar comentário"
-                >
-                  Enviar comentário
-                </button>
-              </form>
               <br />
               <br />
               <br />
-              <div class="menu-bar">
-                <a href="../usuario/usuario.html">
-                  <img src="../../assets/icon-user.svg" alt="icon" />
-                </a>
-                <a href="../denuncias/denuncias.html">
-                  <img
-                    id="home-icon"
-                    class="left-nav-icon"
-                    src="../../assets/icon-home.svg"
-                    alt="home"
-                  />
-                </a>
-                <a href="../minhas-denuncias/minhas-denuncias.html">
-                  <img src="../../assets/icon-tasklist.svg" alt="icon" />
-                </a>
-              </div>
+              <button type="submit" class="button-base bg-main-color" value="Enviar comentário">
+                Enviar comentário
+              </button>
+            </form>
+            <br />
+            <br />
+            <br />
+            <div class="menu-bar">
+              <a href="../usuario/usuario.html">
+                <img src="../../assets/icon-user.svg" alt="icon" />
+              </a>
+              <a href="../denuncias/denuncias.html">
+                <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
+              </a>
+              <a href="../minhas-denuncias/minhas-denuncias.html">
+                <img src="../../assets/icon-tasklist.svg" alt="icon" />
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="../../DOMUtils.js"></script>
-    <script src="../../main.js"></script>
-    <script src="adicionar-comentarios.js"></script>
-  </body>
+  </div>
+  <script src="../../DOMUtils.js"></script>
+  <script src="../../main.js"></script>
+  <script src="adicionar-comentarios.js"></script>
+</body>
+
 </html>
