--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -1,192 +1,148 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../../base.css" />
-    <link rel="stylesheet" href="./admin.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Administrador - SOS WEB</title>
-  </head>
+  <link rel="stylesheet" href="../../reset.css" />
+  <link rel="stylesheet" href="../../base.css" />
+  <link rel="stylesheet" href="./admin.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <!-- DESKTOP -->
-    <div class="left-navbar">
-      <div class="logo-nav">
-        <img src="../../assets/white_icon.svg" alt="sos-logo" />
-        <h4>WEB</h4>
+  <title>Administrador - SOS WEB</title>
+</head>
+
+<body>
+  <!-- DESKTOP -->
+  <div class="left-navbar">
+    <div class="logo-nav">
+      <img src="../../assets/white_icon.svg" alt="sos-logo" />
+      <h4>WEB</h4>
+    </div>
+    <div class="nav-options">
+      <div class="home-nav">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
+        </a>
+        <p>Denúncias</p>
       </div>
-      <div class="nav-options">
-        <div class="home-nav">
-          <a href="../denuncias/denuncias.html">
-            <img
-              id="home-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-home.svg"
-              alt="home"
-            />
-          </a>
-          <p>Denúncias</p>
-        </div>
-        <div class="user-denunciations-nav">
-          <a>
-            <img
-              id="denunciations-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-tasklist.svg"
-              alt="denunciations"
-            />
-          </a>
-          <p id="acao-user-denunciations-nav"></p>
-        </div>
-        <div class="logout-nav">
-          <a onclick="desloga()">
-            <img
-              id="logout-icon"
-              class="left-nav-icon"
-              src="../../assets/exit.svg"
-              alt="logout"
-            />
-          </a>
-          <p>Sair</p>
+      <div class="user-denunciations-nav">
+        <a>
+          <img id="denunciations-icon" class="left-nav-icon" src="../../assets/icon-tasklist.svg" alt="denunciations" />
+        </a>
+        <p id="acao-user-denunciations-nav"></p>
+      </div>
+      <div class="logout-nav">
+        <a onclick="desloga()">
+          <img id="logout-icon" class="left-nav-icon" src="../../assets/exit.svg" alt="logout" />
+        </a>
+        <p>Sair</p>
+      </div>
+    </div>
+  </div>
+  <div class="app">
+    <div class="top-navbar">
+      <p id="top-user-name"></p>
+      <img src="../../assets/user.svg" class="profile-pic-nav" alt="user" />
+    </div>
+    <div class="app-container">
+      <div class="card-app">
+        <div class="denunciations">
+          <header>
+            <div class="option-header">
+              <img class="tree-dots-option" src="../../assets/tree-dots.svg" alt="logout" />
+            </div>
+            <h1>Denúncias</h1>
+            <div class="form-search">
+              <p>Pesquisa</p>
+              <form name="form-search" class="form-search" method="POST">
+                <input id="input-search" type="search" class="input-base" name="search" placeholder="Pesquisa" />
+                <a id="btn-search" class="button-search">
+                  <img class="img-search" src="../../assets/icon-search.svg" alt="Search" />
+                </a>
+              </form>
+            </div>
+            <div class="filters">
+              <p>Filtros</p>
+              <button value="PENDENTE" class="button-base btn-filter">
+                Pendente
+              </button>
+              <button value="APROVADA" class="button-base btn-filter">
+                Aprovada
+              </button>
+              <button value="NEGADA" class="button-base btn-filter">
+                Negada
+              </button>
+            </div>
+          </header>
+          <main>
+            <div class="modal-overlay" style="display: none">
+              <div class="modal-container">
+                <a class="close-modal" type="button">
+                  <p class="btn-close-modal">x</p>
+                </a>
+                <div class="modal-header">
+                  <h1></h1>
+                  <a>
+                    <img style="padding-right: 1.5rem" src="../../assets/arrow-right.svg" alt="Comentários" />
+                  </a>
+                </div>
+                <div class="modal-content">
+                  <p class="content-link"></p>
+                  <br />
+                  <span class="content-historia"></span>
+                </div>
+              </div>
+            </div>
+            <table style="overflow-x: auto" id="denunciations-table">
+              <tr class="table-header">
+                <th>Site/E-mail</th>
+                <th>Nome</th>
+                <th>Nocividade</th>
+                <th>Usuário responsável</th>
+                <th>Situacão</th>
+                <th>Acão</th>
+              </tr>
+            </table>
+            <div class="table-footer">
+              <p>Total de registros: <span class="total-entries"></span></p>
+              <div class="pagination">
+                <a href="#" style="display: none" class="back-pagination">
+                  <img src="../../assets/chevron-left.svg" alt="back-pagination" />
+                </a>
+                <p class="">
+                  Página <span class="page-number"></span> de
+                  <span class="total-pages"></span>
+                </p>
+                <a href="" style="display: none" class="next-pagination">
+                  <img src="../../assets/chevron-right.svg" alt="next-pagination" />
+                </a>
+              </div>
+            </div>
+            <div class="menu-bar">
+              <a href="../usuario/usuario.html">
+                <img src="../../assets/icon-user.svg" alt="icon" />
+              </a>
+              <a href="../denuncias/denuncias.html">
+                <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
+              </a>
+              <a href="../minhas-denuncias/minhas-denuncias.html">
+                <img src="../../assets/icon-tasklist.svg" alt="icon" />
+              </a>
+            </div>
+          </main>
         </div>
       </div>
     </div>
-    <div class="app">
-      <div class="top-navbar">
-        <p id="top-user-name"></p>
-        <img src="../../assets/user.svg" alt="user" />
-      </div>
-      <div class="app-container">
-        <div class="card-app">
-          <div class="denunciations">
-            <header>
-              <div class="option-header">
-                <img
-                  class="tree-dots-option"
-                  src="../../assets/tree-dots.svg"
-                  alt="logout"
-                />
-              </div>
-              <h1>Denúncias</h1>
-              <div class="form-search">
-                <p>Pesquisa</p>
-                <form name="form-search" class="form-search" method="POST">
-                  <input
-                    id="input-search"
-                    type="search"
-                    class="input-base"
-                    name="search"
-                    placeholder="Pesquisa"
-                  />
-                  <a id="btn-search" class="button-search">
-                    <img
-                      class="img-search"
-                      src="../../assets/icon-search.svg"
-                      alt="Search"
-                    />
-                  </a>
-                </form>
-              </div>
-              <div class="filters">
-                <p>Filtros</p>
-                <button value="PENDENTE" class="button-base btn-filter">
-                  Pendente
-                </button>
-                <button value="APROVADA" class="button-base btn-filter">
-                  Aprovada
-                </button>
-                <button value="NEGADA" class="button-base btn-filter">
-                  Negada
-                </button>
-              </div>
-            </header>
-            <main>
-              <div class="modal-overlay" style="display: none">
-                <div class="modal-container">
-                  <a class="close-modal" type="button">
-                    <p class="btn-close-modal">x</p>
-                  </a>
-                  <div class="modal-header">
-                    <h1></h1>
-                    <a>
-                      <img
-                        style="padding-right: 1.5rem"
-                        src="../../assets/arrow-right.svg"
-                        alt="Comentários"
-                      />
-                    </a>
-                  </div>
-                  <div class="modal-content">
-                    <p class="content-link"></p>
-                    <br />
-                    <span class="content-historia"></span>
-                  </div>
-                </div>
-              </div>
-              <table style="overflow-x: auto" id="denunciations-table">
-                <tr class="table-header">
-                  <th>Site/E-mail</th>
-                  <th>Nome</th>
-                  <th>Nocividade</th>
-                  <th>Usuário responsável</th>
-                  <th>Situacão</th>
-                  <th>Acão</th>
-                </tr>
-              </table>
-              <div class="table-footer">
-                <p>Total de registros: <span class="total-entries"></span></p>
-                <div class="pagination">
-                  <a href="#" style="display: none" class="back-pagination">
-                    <img
-                      src="../../assets/chevron-left.svg"
-                      alt="back-pagination"
-                    />
-                  </a>
-                  <p class="">
-                    Página <span class="page-number"></span> de
-                    <span class="total-pages"></span>
-                  </p>
-                  <a href="" style="display: none" class="next-pagination">
-                    <img
-                      src="../../assets/chevron-right.svg"
-                      alt="next-pagination"
-                    />
-                  </a>
-                </div>
-              </div>
-              <div class="menu-bar">
-                <a href="../usuario/usuario.html">
-                  <img src="../../assets/icon-user.svg" alt="icon" />
-                </a>
-                <a href="../denuncias/denuncias.html">
-                  <img
-                    id="home-icon"
-                    class="left-nav-icon"
-                    src="../../assets/icon-home.svg"
-                    alt="home"
-                  />
-                </a>
-                <a href="../minhas-denuncias/minhas-denuncias.html">
-                  <img src="../../assets/icon-tasklist.svg" alt="icon" />
-                </a>
-              </div>
-            </main>
-          </div>
-        </div>
-      </div>
-    </div>
+  </div>
 
-    <script src="../../DOMUtils.js"></script>
-    <script src="../../main.js"></script>
-    <script src="admin.js"></script>
-  </body>
+  <script src="../../DOMUtils.js"></script>
+  <script src="../../main.js"></script>
+  <script src="admin.js"></script>
+</body>
+
 </html>
