--- a/src/pages/comentarios/comentarios.html
+++ b/src/pages/comentarios/comentarios.html
@@ -1,118 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../../base.css" />
-    <link rel="stylesheet" href="./comentarios.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Comentários</title>
-  </head>
+  <link rel="stylesheet" href="../../reset.css" />
+  <link rel="stylesheet" href="../../base.css" />
+  <link rel="stylesheet" href="./comentarios.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <nav class="left-navbar">
-      <div class="logo-nav">
-        <img src="../../assets/white_icon.svg" alt="sos-logo" />
-        <h4>WEB</h4>
+  <title>Comentários</title>
+</head>
+
+<body>
+  <nav class="left-navbar">
+    <div class="logo-nav">
+      <img src="../../assets/white_icon.svg" alt="sos-logo" />
+      <h4>WEB</h4>
+    </div>
+    <div class="nav-options">
+      <div class="home-nav">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
+        </a>
+        <p>Denúncias</p>
       </div>
-      <div class="nav-options">
-        <div class="home-nav">
-          <a href="../denuncias/denuncias.html">
-            <img
-              id="home-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-home.svg"
-              alt="home"
-            />
-          </a>
-          <p>Denúncias</p>
-        </div>
-        <div class="user-denunciations-nav">
-          <a>
-            <img
-              id="denunciations-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-tasklist.svg"
-              alt="denunciations"
-            />
-          </a>
-          <p id="acao-user-denunciations-nav"></p>
-        </div>
-        <div class="logout-nav">
-          <a onclick="desloga()">
-            <img
-              id="logout-icon"
-              class="left-nav-icon"
-              src="../../assets/exit.svg"
-              alt="logout"
-            />
-          </a>
-          <p>Sair</p>
-        </div>
+      <div class="user-denunciations-nav">
+        <a>
+          <img id="denunciations-icon" class="left-nav-icon" src="../../assets/icon-tasklist.svg" alt="denunciations" />
+        </a>
+        <p id="acao-user-denunciations-nav"></p>
       </div>
-    </nav>
-    <div class="app">
-      <div class="top-navbar">
-        <p id="top-user-name"></p>
-        <img src="../../assets/user.svg" alt="user" />
+      <div class="logout-nav">
+        <a onclick="desloga()">
+          <img id="logout-icon" class="left-nav-icon" src="../../assets/exit.svg" alt="logout" />
+        </a>
+        <p>Sair</p>
       </div>
-      <div class="app-container">
-        <div class="card-app">
-          <div class="comments">
-            <header>
-              <div class="modal-header">
-                <h1></h1>
-                <div class="option-header">
-                  <img
-                    class="tree-dots-option"
-                    src="../../assets/tree-dots.svg"
-                    alt="logout"
-                  />
-                </div>
+    </div>
+  </nav>
+  <div class="app">
+    <div class="top-navbar">
+      <p id="top-user-name"></p>
+      <img src="../../assets/user.svg" class="profile-pic-nav" alt="user" />
+    </div>
+    <div class="app-container">
+      <div class="card-app">
+        <div class="comments">
+          <header>
+            <div class="modal-header">
+              <h1></h1>
+              <div class="option-header">
+                <img class="tree-dots-option" src="../../assets/tree-dots.svg" alt="logout" />
               </div>
-              <div class="modal-content">
-                <p class="content-link">www.aloha.com.br</p>
-                <br />
-                <span class="content-historia"></span>
-              </div>
-            </header>
-            <main>
-              <div class="add-comment">
-                <a>
-                  <p>Escrever comentário ></p>
-                </a>
-              </div>
-            </main>
-            <div class="menu-bar">
-              <a href="../usuario/usuario.html">
-                <img src="../../assets/icon-user.svg" alt="icon" />
-              </a>
-              <a href="../denuncias/denuncias.html">
-                <img
-                  id="home-icon"
-                  class="left-nav-icon"
-                  src="../../assets/icon-home.svg"
-                  alt="home"
-                />
-              </a>
-              <a href="../minhas-denuncias/minhas-denuncias.html">
-                <img src="../../assets/icon-tasklist.svg" alt="icon" />
+            </div>
+            <div class="modal-content">
+              <p class="content-link">www.aloha.com.br</p>
+              <br />
+              <span class="content-historia"></span>
+            </div>
+          </header>
+          <main>
+            <div class="add-comment">
+              <a>
+                <p>Escrever comentário ></p>
               </a>
             </div>
+          </main>
+          <div class="menu-bar">
+            <a href="../usuario/usuario.html">
+              <img src="../../assets/icon-user.svg" alt="icon" />
+            </a>
+            <a href="../denuncias/denuncias.html">
+              <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
+            </a>
+            <a href="../minhas-denuncias/minhas-denuncias.html">
+              <img src="../../assets/icon-tasklist.svg" alt="icon" />
+            </a>
           </div>
         </div>
       </div>
     </div>
-    <script src="../../DOMUtils.js"></script>
-    <script src="../../main.js"></script>
-    <script src="./comentarios.js"></script>
-  </body>
+  </div>
+  <script src="../../DOMUtils.js"></script>
+  <script src="../../main.js"></script>
+  <script src="./comentarios.js"></script>
+</body>
+
 </html>
