--- a/src/pages/criar-denuncia/criar-denuncia.html
+++ b/src/pages/criar-denuncia/criar-denuncia.html
@@ -1,154 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../../base.css" />
-    <link rel="stylesheet" href="./criar-denuncia.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Criar denúncia - SOS WEB</title>
-  </head>
+  <link rel="stylesheet" href="../../reset.css" />
+  <link rel="stylesheet" href="../../base.css" />
+  <link rel="stylesheet" href="./criar-denuncia.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <nav class="left-navbar">
-      <div class="logo-nav">
-        <img src="../../assets/white_icon.svg" alt="sos-logo" />
-        <h4>WEB</h4>
-      </div>
-      <div class="nav-options">
-        <div class="home-nav">
-          <a href="../denuncias/denuncias.html">
-            <img
-              id="home-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-home.svg"
-              alt="home"
-            />
-          </a>
-          <p>Denúncias</p>
-        </div>
-        <div class="user-denunciations-nav">
-          <a>
-            <img
-              id="denunciations-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-tasklist.svg"
-              alt="denunciations"
-            />
-          </a>
-          <p id="acao-user-denunciations-nav"></p>
-        </div>
-        <div class="logout-nav">
-          <a onclick="desloga()">
-            <img
-              id="logout-icon"
-              class="left-nav-icon"
-              src="../../assets/exit.svg"
-              alt="logout"
-            />
-          </a>
-          <p>Sair</p>
-        </div>
-      </div>
-    </nav>
-    <div class="app">
-      <header class="top-navbar">
-        <p id="top-user-name"></p>
-        <a href="../usuario/usuario.html">
-          <img src="../../assets/user.svg" alt="user" />
+  <title>Criar denúncia - SOS WEB</title>
+</head>
+
+<body>
+  <nav class="left-navbar">
+    <div class="logo-nav">
+      <img src="../../assets/white_icon.svg" alt="sos-logo" />
+      <h4>WEB</h4>
+    </div>
+    <div class="nav-options">
+      <div class="home-nav">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
         </a>
-      </header>
-      <div class="app-container">
-        <div class="card-app">
-          <div class="sign-up">
-            <!-- DIV DA PÁGINA -->
-            <div class="form-container">
-              <div class="option-header">
-                <img
-                  class="tree-dots-option"
-                  src="../../assets/tree-dots.svg"
-                  alt="logout"
-                />
-              </div>
-              <p class="text-main-color">Criar Denúncia</p>
-              <form
-                name="form_login"
-                class="form-login"
-                id="form_cria_denuncia"
-              >
-                <!-- method="POST" -->
-                <b>Nome da instituição/vendedor:</b>
+        <p>Denúncias</p>
+      </div>
+      <div class="user-denunciations-nav">
+        <a>
+          <img id="denunciations-icon" class="left-nav-icon" src="../../assets/icon-tasklist.svg" alt="denunciations" />
+        </a>
+        <p id="acao-user-denunciations-nav"></p>
+      </div>
+      <div class="logout-nav">
+        <a onclick="desloga()">
+          <img id="logout-icon" class="left-nav-icon" src="../../assets/exit.svg" alt="logout" />
+        </a>
+        <p>Sair</p>
+      </div>
+    </div>
+  </nav>
+  <div class="app">
+    <header class="top-navbar">
+      <p id="top-user-name"></p>
+      <a href="../usuario/usuario.html">
+        <img src="../../assets/user.svg" class="profile-pic-nav" alt="user" />
+      </a>
+    </header>
+    <div class="app-container">
+      <div class="card-app">
+        <div class="sign-up">
+          <!-- DIV DA PÁGINA -->
+          <div class="form-container">
+            <div class="option-header">
+              <img class="tree-dots-option" src="../../assets/tree-dots.svg" alt="logout" />
+            </div>
+            <p class="text-main-color">Criar Denúncia</p>
+            <form name="form_login" class="form-login" id="form_cria_denuncia">
+              <!-- method="POST" -->
+              <b>Nome da instituição/vendedor:</b>
 
-                <input class="input-base" name="nome" required minlength="3" />
+              <input class="input-base" name="nome" required minlength="3" />
 
-                <br />
-                <br />
+              <br />
+              <br />
 
-                <b>Link ou email da denúncia</b>
+              <b>Link ou email da denúncia</b>
 
-                <input
-                  class="input-base"
-                  name="endereco"
-                  required
-                  minlength="5"
-                />
-                <br />
-                <br />
-                <b>Conte sua história:</b>
-                <textarea
-                  class="input-base text-area-base"
-                  style="resize: none"
-                  name="historia"
-                  required
-                ></textarea>
-                <br />
-                <class id="anexar">
-                  Anexar documento
-                  <img
-                    src="../../assets/paper-clip 1.jpg"
-                    width="28"
-                    height="28"
-                  />
-                </class>
-                <br />
-                <input
-                  type="submit"
-                  class="button-base bg-main-color"
-                  style="width: 10rem"
-                  value="Finalizar Denúncia"
-                />
-              </form>
-              <div class="menu-bar">
-                <a href="../usuario/usuario.html">
-                  <img src="../../assets/icon-user.svg" alt="icon" />
-                </a>
-                <a href="../denuncias/denuncias.html">
-                  <img
-                    id="home-icon"
-                    class="left-nav-icon"
-                    src="../../assets/icon-home.svg"
-                    alt="home"
-                  />
-                </a>
-                <a href="../minhas-denuncias/minhas-denuncias.html">
-                  <img src="../../assets/icon-tasklist.svg" alt="icon" />
-                </a>
-              </div>
+              <input class="input-base" name="endereco" required minlength="5" />
+              <br />
+              <br />
+              <b>Conte sua história:</b>
+              <textarea class="input-base text-area-base" style="resize: none" name="historia" required></textarea>
+              <br />
+              <class id="anexar">
+                Anexar documento
+                <img src="../../assets/paper-clip 1.jpg" width="28" height="28" />
+              </class>
+              <br />
+              <input type="submit" class="button-base bg-main-color" style="width: 10rem" value="Finalizar Denúncia" />
+            </form>
+            <div class="menu-bar">
+              <a href="../usuario/usuario.html">
+                <img src="../../assets/icon-user.svg" alt="icon" />
+              </a>
+              <a href="../denuncias/denuncias.html">
+                <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
+              </a>
+              <a href="../minhas-denuncias/minhas-denuncias.html">
+                <img src="../../assets/icon-tasklist.svg" alt="icon" />
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="../../DOMUtils.js"></script>
-    <script src="../../main.js"></script>
-    <script src="criar-denuncias.js"></script>
-  </body>
+  </div>
+  <script src="../../DOMUtils.js"></script>
+  <script src="../../main.js"></script>
+  <script src="criar-denuncias.js"></script>
+</body>
+
 </html>
