--- a/src/pages/denuncias/denuncias.html
+++ b/src/pages/denuncias/denuncias.html
@@ -1,153 +1,116 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../../base.css" />
-    <link rel="stylesheet" href="./denuncias.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Denúncias - SOS WEB</title>
-  </head>
+  <link rel="stylesheet" href="../../reset.css" />
+  <link rel="stylesheet" href="../../base.css" />
+  <link rel="stylesheet" href="./denuncias.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <!-- DESKTOP -->
-    <nav class="left-navbar">
-      <div class="logo-nav">
-        <img src="../../assets/white_icon.svg" alt="sos-logo" />
-        <h4>WEB</h4>
-      </div>
-      <div class="nav-options">
-        <div class="home-nav">
-          <a href="../denuncias/denuncias.html">
-            <img
-              id="home-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-home.svg"
-              alt="home"
-            />
-          </a>
-          <p>Denúncias</p>
-        </div>
-        <div class="user-denunciations-nav">
-          <a>
-            <img
-              id="denunciations-icon"
-              class="left-nav-icon"
-              src="../../assets/icon-tasklist.svg"
-              alt="denunciations"
-            />
-          </a>
-          <p id="acao-user-denunciations-nav"></p>
-        </div>
-        <div class="logout-nav">
-          <a onclick="desloga()">
-            <img
-              id="logout-icon"
-              class="left-nav-icon"
-              src="../../assets/exit.svg"
-              alt="logout"
-            />
-          </a>
-          <p>Sair</p>
-        </div>
-      </div>
-    </nav>
-    <div class="app">
-      <header class="top-navbar">
-        <p id="top-user-name"></p>
-        <a href="../usuario/usuario.html">
-          <img src="../../assets/user.svg" alt="user" />
+  <title>Denúncias - SOS WEB</title>
+</head>
+
+<body>
+  <!-- DESKTOP -->
+  <nav class="left-navbar">
+    <div class="logo-nav">
+      <img src="../../assets/white_icon.svg" alt="sos-logo" />
+      <h4>WEB</h4>
+    </div>
+    <div class="nav-options">
+      <div class="home-nav">
+        <a href="../denuncias/denuncias.html">
+          <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
         </a>
-      </header>
-      <div class="app-container">
-        <div class="card-app">
-          <div class="denunciations">
-            <header>
-              <div class="option-header">
-                <img
-                  class="tree-dots-option"
-                  src="../../assets/tree-dots.svg"
-                  alt="logout"
-                />
-              </div>
-              <h1>Denúncias</h1>
-              <div class="form-search">
-                <p>Pesquisa</p>
-                <form name="form-search" class="form-search" method="POST">
-                  <input
-                    type="search"
-                    class="input-base"
-                    name="search"
-                    placeholder="Pesquisa"
-                  />
-                  <a id="btn-search" class="button-search">
-                    <img
-                      class="img-search"
-                      src="../../assets/icon-search.svg"
-                      alt="Search"
-                    />
-                  </a>
-                </form>
-              </div>
-              <div class="filters">
-                <p>Filtros</p>
-                <button class="button-base btn-filter">Alta</button>
-                <button class="button-base btn-filter">Média</button>
-                <button class="button-base btn-filter">Baixa</button>
-              </div>
-            </header>
-            <main>
-              <table style="overflow-x: auto">
-                <tr class="table-header">
-                  <th>Site/E-mail</th>
-                  <th>Nome</th>
-                  <th>Nocividade</th>
-                </tr>
-              </table>
-              <footer>
-                <div class="table-footer">
-                  <!-- <p class="records"></p> -->
-                  <div class="pagination">
-                    <!-- <p class="pages"></p> -->
-                    <img
-                      class="next-pagination"
-                      src="../../assets/chevron-right.svg"
-                      alt="next-pagination"
-                    />
-                  </div>
+        <p>Denúncias</p>
+      </div>
+      <div class="user-denunciations-nav">
+        <a>
+          <img id="denunciations-icon" class="left-nav-icon" src="../../assets/icon-tasklist.svg" alt="denunciations" />
+        </a>
+        <p id="acao-user-denunciations-nav"></p>
+      </div>
+      <div class="logout-nav">
+        <a onclick="desloga()">
+          <img id="logout-icon" class="left-nav-icon" src="../../assets/exit.svg" alt="logout" />
+        </a>
+        <p>Sair</p>
+      </div>
+    </div>
+  </nav>
+  <div class="app">
+    <header class="top-navbar">
+      <p id="top-user-name"></p>
+      <a href="../usuario/usuario.html">
+        <img src="../../assets/user.svg" class="profile-pic-nav" alt="user" />
+      </a>
+    </header>
+    <div class="app-container">
+      <div class="card-app">
+        <div class="denunciations">
+          <header>
+            <div class="option-header">
+              <img class="tree-dots-option" src="../../assets/tree-dots.svg" alt="logout" />
+            </div>
+            <h1>Denúncias</h1>
+            <div class="form-search">
+              <p>Pesquisa</p>
+              <form name="form-search" class="form-search" method="POST">
+                <input type="search" class="input-base" name="search" placeholder="Pesquisa" />
+                <a id="btn-search" class="button-search">
+                  <img class="img-search" src="../../assets/icon-search.svg" alt="Search" />
+                </a>
+              </form>
+            </div>
+            <div class="filters">
+              <p>Filtros</p>
+              <button class="button-base btn-filter">Alta</button>
+              <button class="button-base btn-filter">Média</button>
+              <button class="button-base btn-filter">Baixa</button>
+            </div>
+          </header>
+          <main>
+            <table style="overflow-x: auto">
+              <tr class="table-header">
+                <th>Site/E-mail</th>
+                <th>Nome</th>
+                <th>Nocividade</th>
+              </tr>
+            </table>
+            <footer>
+              <div class="table-footer">
+                <!-- <p class="records"></p> -->
+                <div class="pagination">
+                  <!-- <p class="pages"></p> -->
+                  <img class="next-pagination" src="../../assets/chevron-right.svg" alt="next-pagination" />
                 </div>
-                <div class="menu-bar">
-                  <a href="../usuario/usuario.html">
-                    <img src="../../assets/icon-user.svg" alt="icon" />
-                  </a>
-                  <a href="../denuncias/denuncias.html">
-                    <img
-                      id="home-icon"
-                      class="left-nav-icon"
-                      src="../../assets/icon-home.svg"
-                      alt="home"
-                    />
-                  </a>
-                  <a href="../minhas-denuncias/minhas-denuncias.html">
-                    <img src="../../assets/icon-tasklist.svg" alt="icon" />
-                  </a>
-                </div>
-              </footer>
-            </main>
-          </div>
+              </div>
+              <div class="menu-bar">
+                <a href="../usuario/usuario.html">
+                  <img src="../../assets/icon-user.svg" alt="icon" />
+                </a>
+                <a href="../denuncias/denuncias.html">
+                  <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home" />
+                </a>
+                <a href="../minhas-denuncias/minhas-denuncias.html">
+                  <img src="../../assets/icon-tasklist.svg" alt="icon" />
+                </a>
+              </div>
+            </footer>
+          </main>
         </div>
       </div>
     </div>
-    <script src="../../DOMUtils.js"></script>
-    <script src="../../main.js"></script>
-    <script src="./denuncias.js"></script>
-  </body>
+  </div>
+  <script src="../../DOMUtils.js"></script>
+  <script src="../../main.js"></script>
+  <script src="./denuncias.js"></script>
+</body>
+
 </html>
